--- a/index.html
+++ b/index.html
@@ -393,18 +393,22 @@
         </div>
         <div class="section__body">
             <div class="note">
-                <a href="https://poeplanner.com/AwAAAwAhAAMAAA0Ag3yw3-q8wZIIHi5WQ2q-jorsLRHpOpws22sAAAAAAAAEAAD______________________wAAAwAAAAMA_____________zwAAAAAFAAfiwgAAAAAAAADAwAAAAAAAAAAAA=="
+                <a href="https://poeplanner.com/AwAAAwAhAAMDAAkAg3yw38GSCB4uVr6OLRHpOpwsAAAAAAAABAAA______________________8AAAMAAAADAP____________88AAAAABQAH4sIAAAAAAAAAwMAAAAAAAAAAAA="
                    class="button">Дерево #1</a>
-                <a href="https://poeplanner.com/AwAAAwAhAAMAACQAqiSDfE2YQIh4K7Df6rzBklEQauMIHrJxnmbS-qym7utsGvhgLlZDajOQvo6K7C0R6TbpOsY6bxaYKpwsR0XRMvRixx_ba6mqAAAAAAEA-IaJnAQAAP______________________AAADAAAAAwD_____________PAAAAAAUAB-LCAAAAAAAAAMDAAAAAAAAAAAA"
+                <a href="https://poeplanner.com/AwAAAwAhAAMDABUAg3xAiHgrsN_BkggerKbu6y5WM5C-jorsLRHpOpgqnCxHRdEyxx_ba6mqAAAAAAAABAAA______________________8AAAMAAAADAP____________88AAAAABQAH4sIAAAAAAAAAwMAAAAAAAAAAAA="
                    class="button">Дерево #2</a>
-                <a href="https://poeplanner.com/AwAAAwAhAAMAAEQA24Nghaokg3xNmECIeCuw3x_wrGrqvMGS8mgPES1MURBIrWrjCB6ycbAUswQHBJ5muU3S-rzMs0yspmyvYQvEqryJ7uvFcmwa-9OaJPhgLlZDah0akVozkL6OWDqK7GbALRHpNuk6xlXGOp9KbxaYKpwsoZtHRdf3mKzRMn2o9GLHHwCi22upqgAAAAABAPiGiZwEAAD______________________wAAAwAAAAMA_____________zwAAAAAFAAfiwgAAAAAAAADAwAAAAAAAAAAAA=="
+                <a href="https://poeplanner.com/AwAAAwAhAAMDACIAqiSDfE2YQIh4K7DfwZJREGrjCB6ycZ5m0vqspu7rbBr4YC5WM5C-jorsLRHpNuk6xjpvFpgqnCxHRdEy9GLHH9trqaoAAAAAAAAEAAD______________________wAAAwAAAAMA_____________zwAAAAAFAAfiwgAAAAAAAADAwAAAAAAAAAAAA=="
                    class="button">Дерево #3</a>
-                <a href="https://poeplanner.com/AwAAAwAhAAMAAGsA24OiPGCFqiSDfMyDTZg4Gqr7QIh4K7DfH_DWL6xq6rzBkvJoVZA3G1ArDxEtTFEQVP72xK7Gz01IrWrjCB6i9rJxsBSzBAcEnmZGjzkGuU047A890vq8zLNMZYispmyvzhxhC8SqvdjzWbyJL_Xu68VybBr703IamiQxWDtq-GA1qC5WQ2q7ah0akVpSUzOQLTy-jlg6iuxmwC0R6TbpOsZVxjqfSm8WLyenr5gqnCyhm0dFnUVgUeCa1_c-t4VlCv7NDZis0TJ9qPRixx8AottrIb-pqgAAAAADAPiGiZwqqxq6v2OUdwQAAP______________________AAADAAAAAwD_____________PAAAAAAUAB-LCAAAAAAAAAMDAAAAAAAAAAAA"
+                <a href="https://poeplanner.com/AwAAAwAhAAMDAC4A24Nghaokg3xNmECIeCuw38GSURBq4wgesnGeZkaPuU3S-rzMrKbEqu7rbBr4YC5WFB0zkL6OWDqK7C0R6TbpOsZVxjpvFpgqnCyhm0dF1_eYrNEy9GLHH9trqaoAAAAAAAAEAAD______________________wAAAwAAAAMA_____________zwAAAAAFAAfiwgAAAAAAAADAwAAAAAAAAAAAA=="
                    class="button">Дерево #4</a>
-                <a href="https://poeplanner.com/AwAAAwAhAAMAAGAA24OiPKokg3wEtcyDOBqq-3grH9Cw3winH_DWL6xq6rzBkvJoVZA3G1ArVP72xK7Gz01q4wgeovaycYrGswQHBJ5mRo85BjjsDz3S-rNMZYispmyvzhxhC73Y81kv9RbN6-_u62wa-9NyGjFYO2r7UfhgNaguVkNqu2oUHZFaUlMtPL6OWDqK7GbALRHpNv5G6TrGVcY6bxYvJ6evnCxHRZ1FYFHgmj63hWUK_s0N0TIYH32o9GLHHwCi22shv6mqAAAAAAQA-IaJnCqrGrq_Y5R3JjZr_QQAAP______________________AAADAAAAAwD_____________PAAAAAAUAB-LCAAAAAAAAAMDAAAAAAAAAAAA"
-                   class="button">После покупки класстера</a>
-                <a href="https://poeplanner.com/AwAAAwAhAAMAAGUA24OiPKokg3wEtTgaqvu85FhoeCsf0LDfCKfnHB_w1i-sauq8qXLBkvJoVZA3G1ArVP72xK7Gz00aj2rjCB57haSAovaycV-DisYHBJ5mRo85BjjsDz3S-rNMZYispmyvzhxhC_NZL_UWzevv7utsGvvTchqKxftR-GA1qC5WQ2q7ahQdkVpSUy08vo6qrIrsVGYtEek2_kbpOsZVxjpvFtZVp6-cLJ1FYFHgmtwchWUvF9iJzQ0YH32o9GKW18cfAKLbayG_qarnZAAAAAAFACqrGromNmv99rGUd124qe5B1lvfBAAA______________________8AAAMAAAADAP____________88AAAAABQAH4sIAAAAAAAAAwMAAAAAAAAAAAA="
-                   class="button">После покупки 2 класстеров</a>
+                <a href="https://poeplanner.com/AwAAAwAhAAMDADgA24Nghaokg3xNmECIeCvKhrDfwZIoYQ8RLUxREEitauMIHrJxsBSeZkaPuU3S-rzMrKbEqu7rxXJsGpok-GAuVh0aFB0zkL6OWDqK7C0R6TbpOsZVxjpvFpgqnCyhm0dF1_c_O5is0TL0Yscf22upqgAAAgCxjCcVAQD4homcBAAA______________________8AAAMAAAADAP____________88AAAAABQAH4sIAAAAAAAAAwMAAAAAAAAAAAA="
+                   class="button">Дерево #5</a>
+                <a href="https://poeplanner.com/AwAAAwAhAAMDAEwA24Nghaokg3xNmDgaQIh4K8qGsN8f8KxqwZLyaFWQKGEPES1MURBIrWrjCB6ycbAUswSeZkaPm4K5TTjs0vr_rrzMrKZsr2ELxKrzWbyJ7uvFcmwa-9OaJPhgLlYdGhQdkVozkL6OWDqK7GbALRHpNuk6xlXGOp9KbxYvJ5gqnCyhm0dF1_c_O5is0TJ9qPRixx8AottrqaoAAAYAgf6P07GMumaKmycVAAAEAAD______________________wAAAwAAAAMA_____________zwAAAAAFAAfiwgAAAAAAAADAwAAAAAAAAAAAA=="
+                   class="button">Дерево #6</a>
+                <a href="https://poeplanner.com/AwAAAwAhAAMDAGAA24NF8mCFqiSDfMyDTZg4GkCIeCvKhrDf4Tof8KxqwZLyaFWQKGFQKw8RLUxREFT-9sSuxkitauPjTQgesnGwFLMEnmZGj5uCuU047NL6_66P_rzMrKZsr84cYQvEqr3Y81m8ie7rxXJsGvvTmiSSNfhgLlYdGhQdkVpSUzOQLTy-jlg6iuxmwC0R6TbpOsZVxjqfSm8WLyenr5gqnCyhm0dFnUXgmtf3PrcK_j87zQ2YrNEyfaj0YscfAKLba6mqAAAIAIH-j9OxjAs5umZe2YqbJxUAAAQAAP______________________AAADAAAAAwD_____________PAAAAAAUAB-LCAAAAAAAAAMDAAAAAAAAAAAA"
+                   class="button">Дерево #7</a>
+                <a href="https://poeplanner.com/AwAAAwAhAAMBAGUA24OqJIN8BLXMgzgaqvtYaHgrH9Cw3winH_DWL6xq6rypcsGS8mhVkFArVP72xPQIrsYaj2rjCB57haSAsnFfg4rGswQHBJ5mRo85BjjsDz3S-rNMZYispmyvzhxhC73Y81nr7-7rbBr703IaisUxWDtq-GA1qC5WQ2q7ahQdkVpSUy08vo6qrFg6iuxmwFRmLRHpNv5G6TrGVcY6bxbWVS8np6-cLJ1FYFHgmj633ByFZS8XCv7Yic0Nfaj0YpbXxx8AottrqarnZAAACAB6QgeR8HyhflR62GndYnB6AwAmNmv99rGUd124qe4EAAD______________________wAAAwAAAAMA_____________zwAAAAAFAAfiwgAAAAAAAADAwAAAAAAAAAAAA=="
+                   class="button">Респек</a>
             </div>
             <div class="equip">
                 <div class="equip__separator">
@@ -1020,7 +1024,7 @@
                         <p class="roadmap__linked">
                             <span class="gem-name--blue">Призыв неистового духа</span><br/>
                             <span class="gem-name--blue">Урон приспешников</span><br/>
-                            <span class="gem-name--red">Расскатистый удар</span> <br/>
+                            <span class="gem-name--red">Раскатистый удар</span> <br/>
                         </p>
                         Без связок : <br/>
                         <span class="gem-name--red">Живучесть</span>
@@ -1056,7 +1060,7 @@
                         </p>
                         Связка №2 : <br/>
                         <p class="roadmap__linked">
-                            <span class="gem-name--red">Расскатистый удар</span><br/>
+                            <span class="gem-name--red">Раскатистый удар</span><br/>
                             <span class="gem-name--blue">Урон приспешников</span><br/>
                             <span class="gem-name--blue">Призыв неистового духа</span><br/>
                             <span class="gem-name--blue">Высвобождение</span> <br/>
