--- a/farm.html
+++ b/farm.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Farm Calculator</title>
+    <title>Экспедиция</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -25,12 +25,126 @@
                 <li class="header__menu-item">
                     <a href="./farm.html" class="header__menu-link">Экспедиция</a>
                 </li>
+                <li class="header__menu-item">
+                    <a href="./build.html" class="header__menu-link">Предметы</a>
+                </li>
             </ul>
         </nav>
     </div>
 </header>
 
 <main class="main">
+    <section class="section container">
+        <div class="section__header">
+            <h3 class="section__title violet-bg" id="expedition">
+                Экспедиция
+            </h3>
+            <div class="section__description">
+                <p>
+                    Фарм журналов экспедиции / Проходка самих журналов / Крутка валюты
+                </p>
+            </div>
+
+        </div>
+        <div class="section__body">
+            <div class="expedition">
+                <div class="expedition__note">
+                    <p>
+                        Фарм журналов экспедиции <span class="notification">Черная коса</span> / <span
+                            class="notification">Орден солнца</span> <br/>
+                        Фарм журналов на картах - <span class="notification">Туджин</span> / <span class="notification">Дэнинг</span>
+                    </p>
+                </div>
+                <ul class="expedition__list">
+                    <li class="expedition__item">
+                        <h3 class="expedition__title">ilvl 50-65</h3>
+                        <div class="expedition__description">
+                            <p>
+                                <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
+                                Журнал экспедиции
+                            </p>
+                        </div>
+                        <a href="https://ru.pathofexile.com/trade/search/Settlers/zPynKaRi4"
+                           class="button expedition__button">
+                            Купить
+                        </a>
+                    </li>
+                    <li class="expedition__item">
+                        <h3 class="expedition__title">ilvl 66-71</h3>
+                        <div class="expedition__description">
+                            <p>
+                                <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
+                                Журнал экспедиции
+                            </p>
+                        </div>
+                        <a href="https://ru.pathofexile.com/trade/search/Settlers/Xg2kgJeCP"
+                           class="button expedition__button">
+                            Купить
+                        </a>
+
+                    </li>
+                    <li class="expedition__item">
+                        <h3 class="expedition__title">ilvl 72-78</h3>
+                        <div class="expedition__description">
+                            <p>
+                                <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
+                                Журнал экспедиции
+                            </p>
+                        </div>
+                        <a href="https://ru.pathofexile.com/trade/search/Settlers/jdZPdWRHX"
+                           class="button expedition__button">
+                            Купить
+                        </a>
+                    </li>
+                    <li class="expedition__item">
+                        <h3 class="expedition__title content__lvl-orange">ilvl 79-81</h3>
+                        <div class="expedition__description">
+                            <p>
+                                <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
+                                Журнал экспедиции
+                            </p>
+                        </div>
+                        <a href="https://ru.pathofexile.com/trade/search/Settlers/odeZdaOhl"
+                           class="button expedition__button">
+                            Купить
+                        </a>
+                    </li>
+                    <li class="expedition__item">
+                        <h3 class="expedition__title content__lvl-red">ilvl 81-83</h3>
+                        <div class="expedition__description">
+                            <p>
+                                <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
+                                Журнал экспедиции
+                            </p>
+                        </div>
+                        <a href="https://ru.pathofexile.com/trade/search/Settlers/36ePDb0F5"
+                           class="button expedition__button">
+                            Купить
+                        </a>
+                    </li>
+                </ul>
+                <div class="expedition__note">
+                    <ul class="expedition__list-boss">
+                        <li class="expedition__item-boss">
+                            (50-65) Ворана - <a href="https://ru.pathofexile.com/trade/search/Settlers/ZR8PRE8CQ">Купить</a>
+                        </li>
+                        <li class="expedition__item-boss">
+                            (66-71) Ворана - <a href="https://ru.pathofexile.com/trade/search/Settlers/KvG9vO6c5">Купить</a>
+                        </li>
+                        <li class="expedition__item-boss">
+                            (72-78) Ворана - <a href="https://ru.pathofexile.com/trade/search/Settlers/5KeGKBJTa">Купить</a>
+                        </li>
+                        <li class="expedition__item-boss">
+                            (79-81) Ворана - <a href="https://ru.pathofexile.com/trade/search/Settlers/5KeGKPJfa">Купить</a>
+                        </li>
+                        <li class="expedition__item-boss">
+                            (81-83) Ворана - <a href="https://ru.pathofexile.com/trade/search/Settlers/pdvldWWS0">Купить</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="section container">
         <div class="section__header">
             <h3 class="section__title violet-bg">
