--- a/build.html
+++ b/build.html
@@ -299,7 +299,7 @@
             <div class="items__list-description">
               Купить первым слотом, билдообразующий предмет, после его покупки респек.
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/wmVyEQTb">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/wmVyEQTb">
               <button class="item__list-button button">
                 купить
               </button>
@@ -313,7 +313,7 @@
             <div class="items__list-description">
               Начальный щит, покупается сразу с Клыком
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/WDm2LvCm">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/WDm2LvCm">
               <button class="item__list-button button">
                 купить
               </button>
@@ -327,7 +327,7 @@
             <div class="items__list-description">
               Шлем, финалка, покупается сразу с Клыком.
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/OVowG3afE">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/OVowG3afE">
               <button class="item__list-button button">
                 купить
               </button>
@@ -341,7 +341,7 @@
             <div class="items__list-description">
               Покупаем или крафтим сразу
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/Jd0qeErsl">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/Jd0qeErsl">
               <button class="item__list-button button">
                 купить
               </button>
@@ -355,7 +355,7 @@
             <div class="items__list-description">
               Без нее не призвать пауков, покупаем сразу с Клыком
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/Pjzz7UL">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/Pjzz7UL">
               <button class="item__list-button button">
                 купить
               </button>
@@ -369,7 +369,7 @@
             <div class="items__list-description">
               Покупаем по возможности или крафтим
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/mX6jq8zt6">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/mX6jq8zt6">
               <button class="item__list-button button">
                 купить
               </button>
@@ -383,7 +383,7 @@
             <div class="items__list-description">
               Покупаем по возможности или крафтим
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/eX4WVQ6UL">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/eX4WVQ6UL">
               <button class="item__list-button button">
                 купить
               </button>
@@ -397,7 +397,7 @@
             <div class="items__list-description">
               Покупаем по возможности или крафтим, можно использовать под отсающую стихию
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/2o07qaoFk">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/2o07qaoFk">
               <button class="item__list-button button">
                 купить
               </button>
@@ -411,7 +411,7 @@
             <div class="items__list-description">
               Покупаются по возможности
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/rLoK4Y7TQ">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/rLoK4Y7TQ">
               <button class="item__list-button button">
                 купить
               </button>
@@ -425,7 +425,7 @@
             <div class="items__list-description">
               Покупаются по возможности
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/yadvbpGCR">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/yadvbpGCR">
               <button class="item__list-button button">
                 купить
               </button>
@@ -439,7 +439,7 @@
             <div class="items__list-description">
               Берем под сопротивления, если дорого, уменьшаем в фильтрах резы/хп
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/dRow8gPUJ">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/dRow8gPUJ">
               <button class="item__list-button button">
                 купить
               </button>
@@ -453,7 +453,7 @@
             <div class="items__list-description">
               Выбираем что получше, самое важное - Проклинает отчаянием при нанесении удара
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/ndmlDbzt0">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/ndmlDbzt0">
               <button class="item__list-button button">
                 купить
               </button>
@@ -467,7 +467,7 @@
             <div class="items__list-description">
               Берем любой на закрытие резистов + зачарка 2x Прозрачное масло, Лазурное масло
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/eq9PvzghL">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/eq9PvzghL">
               <button class="item__list-button button">
                 купить
               </button>
@@ -481,7 +481,7 @@
             <div class="items__list-description">
               Даст много дефа.
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/QLZBK2MSw">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/QLZBK2MSw">
               <button class="item__list-button button">
                 купить
               </button>
@@ -495,7 +495,7 @@
             <div class="items__list-description">
               Под пояс необходимо сделать/купить 2 самоцвета бездны.
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/3mBBgZ9H5">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/3mBBgZ9H5">
               <button class="item__list-button button">
                 купить
               </button>
@@ -509,7 +509,7 @@
             <div class="items__list-description">
               Купить вместе с поясом и вставить в него
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/Dlk6j3dC5">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/Dlk6j3dC5">
               <button class="item__list-button button">
                 купить
               </button>
@@ -523,7 +523,7 @@
             <div class="items__list-description">
              Если валюты больше - Купить вместе с поясом и вставить в него
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/Dlk6j3dC5">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/Dlk6j3dC5">
               <button class="item__list-button button">
                 купить
               </button>
@@ -540,7 +540,7 @@
             <div class="items__list-description">
               Щит даст много выживаемости.
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/QLZBK2MSw">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/QLZBK2MSw">
               <button class="item__list-button button">
                 купить
               </button>
@@ -554,7 +554,7 @@
             <div class="items__list-description">
               Меняем обычный флакон на +1500 к дефу на этот, выбираем шанс блока от 10% и 5%
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/443gT9">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/443gT9">
               <button class="item__list-button button">
                 купить
               </button>
@@ -568,7 +568,7 @@
             <div class="items__list-description">
               Меняем амулет на этот, накидываем зачарку 2 золотых 1 перламутровое
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/D8Z8aXC5">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/D8Z8aXC5">
               <button class="item__list-button button">
                 купить
               </button>
@@ -582,7 +582,7 @@
             <div class="items__list-description">
               Добавить урона, брать не раньше 88 уровня.
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/Gk4dMeYCb">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/Gk4dMeYCb">
               <button class="item__list-button button">
                 купить
               </button>
@@ -596,7 +596,7 @@
             <div class="items__list-description">
               Даст много урона, вставлять в слот большого кластерного
             </div>
-            <a href="https://ru.pathofexile.com/trade/search/Settlers/E9gkPJZh5">
+            <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/E9gkPJZh5">
               <button class="item__list-button button">
                 купить
               </button>
