--- a/farm.html
+++ b/farm.html
@@ -64,7 +64,7 @@
                                 Журнал экспедиции
                             </p>
                         </div>
-                        <a href="https://ru.pathofexile.com/trade/search/Settlers/zPynKaRi4"
+                        <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/zPynKaRi4"
                            class="button expedition__button">
                             Купить
                         </a>
@@ -77,7 +77,7 @@
                                 Журнал экспедиции
                             </p>
                         </div>
-                        <a href="https://ru.pathofexile.com/trade/search/Settlers/Xg2kgJeCP"
+                        <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/Xg2kgJeCP"
                            class="button expedition__button">
                             Купить
                         </a>
@@ -91,7 +91,7 @@
                                 Журнал экспедиции
                             </p>
                         </div>
-                        <a href="https://ru.pathofexile.com/trade/search/Settlers/jdZPdWRHX"
+                        <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/jdZPdWRHX"
                            class="button expedition__button">
                             Купить
                         </a>
@@ -104,7 +104,7 @@
                                 Журнал экспедиции
                             </p>
                         </div>
-                        <a href="https://ru.pathofexile.com/trade/search/Settlers/odeZdaOhl"
+                        <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/odeZdaOhl"
                            class="button expedition__button">
                             Купить
                         </a>
@@ -117,7 +117,7 @@
                                 Журнал экспедиции
                             </p>
                         </div>
-                        <a href="https://ru.pathofexile.com/trade/search/Settlers/36ePDb0F5"
+                        <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/36ePDb0F5"
                            class="button expedition__button">
                             Купить
                         </a>
@@ -126,19 +126,19 @@
                 <div class="expedition__note">
                     <ul class="expedition__list-boss">
                         <li class="expedition__item-boss">
-                            (50-65) Ворана - <a href="https://ru.pathofexile.com/trade/search/Settlers/ZR8PRE8CQ">Купить</a>
+                            (50-65) Ворана - <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/ZR8PRE8CQ">Купить</a>
                         </li>
                         <li class="expedition__item-boss">
-                            (66-71) Ворана - <a href="https://ru.pathofexile.com/trade/search/Settlers/KvG9vO6c5">Купить</a>
+                            (66-71) Ворана - <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/KvG9vO6c5">Купить</a>
                         </li>
                         <li class="expedition__item-boss">
-                            (72-78) Ворана - <a href="https://ru.pathofexile.com/trade/search/Settlers/5KeGKBJTa">Купить</a>
+                            (72-78) Ворана - <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/5KeGKBJTa">Купить</a>
                         </li>
                         <li class="expedition__item-boss">
-                            (79-81) Ворана - <a href="https://ru.pathofexile.com/trade/search/Settlers/5KeGKPJfa">Купить</a>
+                            (79-81) Ворана - <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/5KeGKPJfa">Купить</a>
                         </li>
                         <li class="expedition__item-boss">
-                            (81-83) Ворана - <a href="https://ru.pathofexile.com/trade/search/Settlers/pdvldWWS0">Купить</a>
+                            (81-83) Ворана - <a href="https://ru.pathofexile.com/trade/search/Necro%20Settlers/pdvldWWS0">Купить</a>
                         </li>
                     </ul>
                 </div>
