--- a/teplodeda.html
+++ b/teplodeda.html
@@ -362,7 +362,7 @@
                 {
                     title: 'Камни умений',
                     stones: [
-                        'Волна осуждения → воспламенение → разгул стихий',
+                        'Ползучая магма → воспламенение → разгул стихий',
                         'Стена огня',
                         'Огненный рывок → Колдовской выброс',
                         'Удар щитом',
@@ -453,9 +453,9 @@
                     ],
                     type: 'purchase',
                     links: [
-                        { text: 'Жажда Китавы', url: '#' },
-                        { text: 'жезл отступника', url: '#' },
-                        { text: 'доспех с 5-6 гнездами', url: '#' }
+                        { text: 'Жажда Китавы', url: 'https://ru.pathofexile.com/trade/search/Standard/rXZ7CQ' },
+                        { text: 'жезл отступника', url: 'https://ru.pathofexile.com/trade/search/Standard/RlDVqF7' },
+                        { text: 'доспех с 5-6 гнездами', url: 'https://ru.pathofexile.com/trade/search/Standard/8BXMdVUV' }
                     ]
                 },
                 {
@@ -480,7 +480,7 @@
                     ],
                     type: 'add',
                     links: [
-                        { text: 'Кольцо льда морозных шаров', url: '#' }
+                        { text: 'Кольцо льда морозных шаров', url: 'https://ru.pathofexile.com/trade/search/Standard/KJRBjl6F5' }
                     ]
                 },
                 {
@@ -493,7 +493,7 @@
                     ],
                     type: 'add',
                     links: [
-                        { text: 'Ледяной скачок зимней вьюги', url: '#' }
+                        { text: 'Ледяной скачок зимней вьюги', url: 'https://ru.pathofexile.com/trade/search/Standard/3BzeZdPU5' }
                     ]
                 },
                 {
