--- a/teplodeda.html
+++ b/teplodeda.html
@@ -652,6 +652,28 @@
                 description: 'Пикам любой',
                 purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/4mMD0G68i9'
             }
+        },
+        'Флаконы': {
+            'Фласка на ХП': {
+                description: 'Берем как можно раньше или крафтим такую же',
+                purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/XlEpYnBIP',
+            },
+            'Флакон на боевой раж': {
+                description: '-',
+                purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/Z6KqgG86tQ'
+            },
+            'Флакон на крит': {
+                description: '--',
+                purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/lgoyGLKpIV'
+            },
+            'Флакон на мувспид': {
+                description: '---',
+                purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/nrlkGe9vH0'
+            },
+            'Флакон на призрачную форму': {
+                description: '---',
+                purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/d8kZqE7RFJ'
+            }
         }
     };
 
