--- a/teplodeda.html
+++ b/teplodeda.html
@@ -680,8 +680,12 @@
                 purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/aVppCe'
             }
         },
-        'Самоцветы': {
-            'В пояс': {
+        'Самоцветы':
+            {'В пояс': {
+                description: 'Пояс + затычки пока не куплены другие',
+                purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/X3mRQdP4cP',
+            },
+            'Затычка': {
                 description: 'Пояс + затычки пока не куплены другие',
                 purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/4lyVpbvu9',
             },
