--- a/teplodeda.html
+++ b/teplodeda.html
@@ -682,18 +682,18 @@
         },
         'Самоцветы':
             {'В пояс': {
-                description: 'Пояс + затычки пока не куплены другие',
+                description: 'Пояс',
                 purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/X3mRQdP4cP',
             },
             'Затычка': {
-                description: 'Пояс + затычки пока не куплены другие',
+                description: ' затычки пока не куплены другие',
                 purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/4lyVpbvu9',
             },
             'Неестественный инстинкт': {
                 description: 'Уник',
                 purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/BlnM9Qu8'
             },
-            'Здоровый дух': {
+            'Здоровый дух(в первую очередь)': {
                 description: 'Покупаем сразу 18%+',
                 purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/PlvgIL'
             },
