--- a/teplodeda.html
+++ b/teplodeda.html
@@ -671,6 +671,10 @@
             }
         },
         'Пояс': {
+            'Дешевка': {
+                description: 'Если начальная дорогая',
+                purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/aLk9vOlpte'
+            },
             'Начальная': {
                 description: '',
                 purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/EDZ30lLu5'
@@ -678,6 +682,10 @@
             'Хедхантер': {
                 description: '',
                 purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/aVppCe'
+            },
+            'Воцарившаяся тьма': {
+                description: 'с 2мя самоцветами может быть лучше',
+                purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/bDmlynKtL'
             }
         },
         'Самоцветы':
@@ -708,7 +716,11 @@
             'Глаз хранителя': {
                 description: 'Пикам любой',
                 purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/4mMD0G68i9'
-            }
+            },
+                'Воцарившаяся тьма х2': {
+                    description: ' затычки пока не куплены другие',
+                    purchaseLink: 'https://ru.pathofexile.com/trade/search/Standard/4lyVpbvu9',
+                },
         },
         'Флаконы': {
             'Фласка на ХП': {
